# Neural

./: .gitignore  PROJECT-OVERVIEW.md  README.md  cd.md  ecosystem.config.js  package-lock.json  package.json
apps/api/: .env.example  package.json
apps/api/src/: app.module.ts  load-env.ts  main.ts
apps/api/src/domain/: pricing.ts  rng.ts  solana.ts  types.ts
apps/api/src/indexer/: indexer.controller.ts  indexer.module.ts  onchain-indexer.service.ts
apps/api/src/registry/: avatar.ts  registry.controller.ts  registry.module.ts  registry.service.ts
apps/api/src/rpc/: rpc.controller.ts  rpc.module.ts
apps/api/src/simulation/: agent-factory.ts  pools.ts  simulation.module.ts  simulation.service.ts  timing.ts
apps/api/src/store/: json-store.ts  store.service.ts
apps/web/: .env.example  next.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  template.tsx
apps/web/src/components/: ActivityFeed.tsx  AgentAvatar.tsx  AgentGridCard.tsx  Backdrop.tsx  BurnClient.tsx  CategoryGrid.tsx  CommandPalette.tsx  ConnectButton.tsx  Copyable.tsx  CountUp.tsx  Cursor.tsx  ExploreClient.tsx  Footer.tsx  Handle.tsx  HeroTerminal.tsx  Leaderboard.tsx  MiniChart.tsx  Nav.tsx  PayWithSol.tsx  RegisterClient.tsx  Reveal.tsx  (+8 more)
onchain/: .gitignore  Cargo.toml  README.md  verify.mjs
onchain/scripts/: set-config.sh
onchain/src/: lib.rs
scripts/: .buyback-state.json  avatar-shot.cjs  buyback-burn.mjs  git-history.ps1  launch-token.mjs  neurons-admin.mjs  peg-prices.mjs  seed-agents.ps1  shoot.js  spider-shot.cjs
(+20 files in other folders)
